Opened 10 years ago

Closed 10 years ago

#11681 closed bug (fixed)

DragMessage with BBitmap crashes app_server

Reported by: arroyoc Owned by: axeld
Priority: normal Milestone: Unscheduled
Component: Servers/app_server Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

My first bug report here!

Run the following app: git clone https://github.com/AdrianArroyoCalle/SuperFreeCell git reset --hard 2d7d8f00fde2d9a4bf91dfd43af0a693944049b3 mkdir build cd build cmake .. make ./SuperFreeCell

Move the cards fast, it should crash and KDL appears. Also if you move the mouse the screen is rendered but it does nothing.

Attachments (2)

HaikuKDL.PNG (62.8 KB ) - added by arroyoc 10 years ago.
app_server-1435-debug-30-12-2014-16-58-36.report (31.0 KB ) - added by arroyoc 10 years ago.

Download all attachments as: .zip

Change History (7)

comment:1 by anevilyak, 10 years ago

A photo of the kdl screen would be helpful.

by arroyoc, 10 years ago

Attachment: HaikuKDL.PNG added

comment:2 by anevilyak, 10 years ago

Component: - GeneralServers/app_server
Owner: changed from nobody to axeld

That's actually an app_server crash rather than a KDL. Please type save-report at the prompt, and after rebooting attach the resulting crash report file to this ticket.

comment:3 by waddlesplash, 10 years ago

Platform: x86All
Summary: DragMessage with BBitmap crash Haiku and gets into KDLDragMessage with BBitmap crashes app_server

comment:5 by jackburton, 10 years ago

Resolution: fixed
Status: newclosed

I fixed the app_server crash in hrev49530. SuperFreeCell rev 2d7d8f00fde2d9a4bf91dfd43af0a693944049b3 still crashes, though. I tried the current revision but it does nothing at all.

Note: See TracTickets for help on using tickets.