src/servers/app/ServerWindow.cpp
@@ -2074,7 +2074,8 @@ fDesktop->UnlockSingleWindow();
 						fDesktop->EventDispatcher().SetDragMessage(dragMessage,
 							bitmap, offset);
 fDesktop->LockSingleWindow();
-						bitmap->ReleaseReference();
+						if (bitmap != NULL)
+							bitmap->ReleaseReference();
 				}
 				delete[] buffer;
 			}
